--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,18 @@
 page-about {
-
+  .hiddenCanvas { 
+    display: none; 
+  }
+  div#tooltip {
+      position: absolute;        
+      display: inline-block;
+      padding: 10px;
+      font-family: 'Open Sans' sans-serif;
+      color: #000;
+      background-color: #fff;
+      border: 1px solid #999;
+      border-radius: 2px;
+      pointer-events: none;
+      opacity: 0;
+      z-index: 1;
+    }
 }
